@@ -17,6 +17,15 @@
   <NamerFactionAnty.rulePack.rulesStrings.14>r_name->포리어거스 군단</NamerFactionAnty.rulePack.rulesStrings.14>
   <NamerFactionAnty.rulePack.rulesStrings.15>r_name->닐란데리아 군단</NamerFactionAnty.rulePack.rulesStrings.15>
   <NamerFactionAnty.rulePack.rulesStrings.16>r_name->카타글리피스 군단</NamerFactionAnty.rulePack.rulesStrings.16>
+  <NamerFactionAnty.rulePack.rulesStrings.17>r_name->콜로봅시스 군단</NamerFactionAnty.rulePack.rulesStrings.17>
+  <NamerFactionAnty.rulePack.rulesStrings.18>r_name->도릴루스 군단</NamerFactionAnty.rulePack.rulesStrings.18>
+  <NamerFactionAnty.rulePack.rulesStrings.19>r_name->솔레놉시스 군단</NamerFactionAnty.rulePack.rulesStrings.19>
+  <NamerFactionAnty.rulePack.rulesStrings.20>r_name->디노포네라 군단</NamerFactionAnty.rulePack.rulesStrings.20>
+  <NamerFactionAnty.rulePack.rulesStrings.21>r_name->오돈토마쿠스 군단</NamerFactionAnty.rulePack.rulesStrings.21>
+  <NamerFactionAnty.rulePack.rulesStrings.22>r_name->미르메시아 군단</NamerFactionAnty.rulePack.rulesStrings.22>
+  <NamerFactionAnty.rulePack.rulesStrings.23>r_name->세팔로테스 군단</NamerFactionAnty.rulePack.rulesStrings.23>
+  <NamerFactionAnty.rulePack.rulesStrings.24>r_name->오에코필라 군단</NamerFactionAnty.rulePack.rulesStrings.24>
+
   <NamerSettlementAnty.rulePack.rulesStrings.0>r_name(p=12)->[townname_wordgen]</NamerSettlementAnty.rulePack.rulesStrings.0>
   <NamerSettlementAnty.rulePack.rulesStrings.1>r_name(p=4)->[townname_combo]</NamerSettlementAnty.rulePack.rulesStrings.1>
   <NamerSettlementAnty.rulePack.rulesStrings.2>r_name->[townname_near]</NamerSettlementAnty.rulePack.rulesStrings.2>
